--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,41 @@
 <html lang-"en">
 <head>
     <title>Angular with Material Design</title>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
+
+    <!-- dependecies -->
+    <link rel="stylesheet" type="text/css" href="lib/angular-material/angular-material.css">
+    <script type="text/javascript" src="lib/angular/angular.js"></script>
+    <script type="text/javascript" src="lib/angular-aria/angular-aria.js"></script>
+    <script type="text/javascript" src="lib/angular-animate/angular-animate.js"></script>
+    <script type="text/javascript" src="lib/hammerjs/hammer.js"></script>
+    <script type="text/javascript" src="lib/angular-material/angular-material.js"></script>
+
+    <!-- app scripts -->
+    <style type="text/css"></style>
+    <script type="text/javascript">
+        var app = angular.module('AngMat', ['ngMaterial']);
+    </script>
 </head>
-<body>
-    <h1>Enjoy!</h1>
+<body ng-app="AngMat">
+    <div layout="column" layout-fill>
+        <section layout="row" flex>
+            <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$media('gt-md')">
+                <md-toolbar><h1 class="md-toolbar-tools"><span>Title</span></h1></md-toolbar>
+                <md-content class="md-padding">
+                    <p>Sidenav Items</p>
+                </md-content>
+            </md-sidenav>
+
+            <md-content layout-fill>
+                <div layout="column">
+                    <md-toolbar><h2 class="md-toolbar-tools"><span>Toolbar</span></h2></md-toolbar>
+                    <md-content class="md-padding">
+                        <p>Main content goes here</p>
+                    </md-content>
+                </div>
+            </md-content>
+        </section>
+    </div>
 </body>
 </html>
