fix lang attribute of html tag

--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
-<html lang-"en">
+<html lang="en">
 <head>
     <title>Angular with Material Design</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel="stylesheet" type="text/css" href="lib/angular-material/angular-material.css">
     <link rel="stylesheet" type="text/css" href="icons/font-awesome-4.2.0/css/font-awesome.css">
-
     <!-- app styles -->
     <style type="text/css"></style>
 </head>
